--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
-        <q>aren't you just <b>bored</b> with all those slides-based presentations?</q>
-        <b>dasdfㅇ최낙영</b>
+        <q>Sign up with <strong>GitHub</strong></q>
+        <b>최낙영</b>
     </div>
 
     <!--
